--- a/stable/kube2iam/templates/clusterrole.yaml
+++ b/stable/kube2iam/templates/clusterrole.yaml
@@ -9,6 +9,16 @@ metadata:
     app.kubernetes.io/managed-by: {{ .Release.Service }}
   name: {{ template "kube2iam.fullname" . }}
 rules:
+{{- if .Values.rbac.podSecurityPolicy }}
+  - apiGroups:
+      - policy/v1beta1
+    resources: 
+      - podsecuritypolicies
+    verbs:
+      - use
+    resourceNames:
+      - {{ template "kube2iam.fullname" . }}
+{{- end }}
   - apiGroups:
       - ""
     resources:
