--- a/stable/kube2iam/values.yaml
+++ b/stable/kube2iam/values.yaml
@@ -79,6 +79,22 @@ rbac:
   ##
   serviceAccountName: default
 
+  ## If true, create & use Pod Security Policy resources
+  ## https://kubernetes.io/docs/concepts/policy/pod-security-policy/
+  podSecurityPolicy: false
+
+## Security context for pod
+## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/security-context/
+securityContext:
+  enabled: false
+
+  # DaemonSet security context
+  fsGroup: 1001
+
+  # Pod security context
+  runAsUser: 1001
+  runAsNonRoot: true
+
 resources: {}
   # limits:
   #   cpu: 4m
